
Package org.springframework.jdbc.support
* changed SQLErrorCodesFactory, it now caches database product name in a Map based on hashCode from DataSource to avoid unnecessary meta data lookups
* added an extractDatabaseMetaData method to JdbcUtils.  This change also adds an interface named DatabaseMetaDataCallBackHandler that must be used for this method

Package org.springframework.orm
* fixed Hibernate Session unbinding in case of JtaTransactionManager with flush failure im beforeCommit synchronization
* added support for transaction-scoped Sessions with plain JTA or EJB CMT, without JtaTransactionManager being involved
* added explicit auto-commit handling to LocalSessionFactoryBean's "executeSchemaScript" method
* SqlMapClientTemplate closes the SqlMapSession even if JDBC Connection retrieval or closing failed

Package org.springframework.remoting
* refined exceptions thrown by RmiClientInterceptor's "createRmiProxy" and RmiProxyFactoryBean's "afterPropertiesSet"

Package org.springframework.transaction
* fixed AbstractPlatformTransactionManager's handling of beforeCompletion callbacks in case of beforeCommit failures
* added WebSphere 5.1 check to WebSphereTransactionManagerFactoryBean (covering versions 5.1, 5.0 and 4 now)

Package org.springframework.util
* added "retrieveMatchingFiles" method to PathMatcher, retrieving matching files from a directory tree
* added "isPattern" method to PathMatcher, checking whether a given string has to be matched via the "match" method

Package org.springframework.validation
* fixed bug where DataBinder would choke on null values of required fields, resulting in an NPE
* factored out message code resolution into MessageCodesResolver strategy, with DefaultMessageCodesResolver impl
* DefaultMessageCodesResolver generates codes for specific elements and the whole collection in case of array/List/Map
* DefaultMessageCodesResolver generates code for the type of a field, e.g. "typeMismatch.java.lang.String"