@@ -39,8 +39,14 @@
 
   <bean id="Informix" class="org.springframework.jdbc.support.SQLErrorCodes">
     <property name="databaseProductName"><value>Informix Dynamic Server</value></property>
-    <property name="badSqlGrammarCodes"><value>-201,-217,-696,</value></property>
+    <property name="badSqlGrammarCodes"><value>-201,-217,-696</value></property>
     <property name="dataIntegrityViolationCodes"><value>-239,-268,-692,-11030</value></property>
+  </bean>
+
+  <bean id="PostgreSQL" class="org.springframework.jdbc.support.SQLErrorCodes">
+    <property name="useSqlStateForTranslation"><value>true</value></property>
+    <property name="badSqlGrammarCodes"><value>03000,42000,42601,42803,42602,42622,42939,42804,42P18,42809,42703,42883,42P01,42P02,42704</value></property>
+    <property name="dataIntegrityViolationCodes"><value>23000,23001,23502,23503,23505,23514</value></property>
   </bean>
 
 </beans>
